k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alltrails-to-gpx
  labels:
    app: alltrails-to-gpx
spec:
  selector:
    app: alltrails-to-gpx
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
