k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alltrails-to-gpx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: alltrailstogpx-app-tls
      hosts:
        - alltrailstogpx.app
  rules:
    - host: alltrailstogpx.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alltrails-to-gpx
                port:
                  number: 80
